--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -4,33 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="stylesheet" href="css/style.css">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <div id="product-image" class="two-col">
+      <img src="images/image-product-desktop.jpg" alt="Product image" id="desktop-img">
+      <img src="images/image-product-mobile.jpg" alt="Product image" id="mobile-img">
+    </div>
+    <div id="product-info" class="two-col">
+      <div id="product-name">
+        <h5>PERFUME</h5>
+      </div>
+      <div id="product-slogan">
+        <h1>Gabrielle Essence Eau De Parfum</h1>
+      </div>
+      <div id="product-details">
+        A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
+      </div>
+      <div id="price">
+        <h2>$149.99<span><strike>$169.99</strike></span></h2>
+      </div>
+      <div id="add-cart">
+        <button>
+          <img src="images/icon-cart.svg" alt="Cart icon" id="cart-icon">
+          Add to Cart
+        </button>
+      </div>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Thulani Mgaga</a>.
+    </div>
   </div>
 </body>
 </html>
