--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -13,28 +13,33 @@
 <body>
 
   <div class="container">
-    <div id="product-image" class="two-col">
-      <img src="images/image-product-desktop.jpg" alt="Product image" id="desktop-img">
-      <img src="images/image-product-mobile.jpg" alt="Product image" id="mobile-img">
-    </div>
-    <div id="product-info" class="two-col">
-      <div id="product-name">
-        <h5>PERFUME</h5>
+    <div class="center">
+      <div id="product-image" class="two-col">
+        <img src="images/image-product-desktop.jpg" alt="Product image" id="desktop-img">
+        <img src="images/image-product-mobile.jpg" alt="Product image" id="mobile-img">
       </div>
-      <div id="product-slogan">
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-      </div>
-      <div id="product-details">
-        A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
-      </div>
-      <div id="price">
-        <h2>$149.99<span><strike>$169.99</strike></span></h2>
-      </div>
-      <div id="add-cart">
-        <button>
-          <img src="images/icon-cart.svg" alt="Cart icon" id="cart-icon">
-          Add to Cart
-        </button>
+      <div id="banner" class="two-col">
+        <div class="product-info">
+          <div id="product-name">
+            <h5>PERFUME</h5>
+          </div>
+          <div id="product-slogan">
+            <h1>Gabrielle Essence Eau De Parfum</h1>
+          </div>
+          <div id="product-details">
+            A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
+          </div>
+          <div id="price">
+            <h2>$149.99</h2>
+            <p><small><strike>$169.99</strike></small></p>
+          </div>
+          <div id="add-cart">
+            <button>
+              <img src="images/icon-cart.svg" alt="Cart icon" id="cart-icon">
+              <p>Add to Cart</p>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
